// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Breadcrumb/demo/basic.md correctly 1`] = `
<div>
  <div
    class="arco-breadcrumb"
    role="list"
  >
    <div
      class="arco-breadcrumb-item"
      role="listitem"
    >
      Home
    </div>
    <span
      aria-hidden="true"
      class="arco-breadcrumb-item-separator"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-oblique-line"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M29.506 6.502 18.493 41.498"
        />
      </svg>
    </span>
    <div
      class="arco-breadcrumb-item"
      role="listitem"
    >
      <a
        href="#"
      >
        Channel
      </a>
    </div>
    <span
      aria-hidden="true"
      class="arco-breadcrumb-item-separator"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-oblique-line"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M29.506 6.502 18.493 41.498"
        />
      </svg>
    </span>
    <div
      class="arco-breadcrumb-item"
      role="listitem"
    >
      News
    </div>
  </div>
</div>
`;

exports[`renders Breadcrumb/demo/max-count.md correctly 1`] = `
<div>
  <div
    class="arco-breadcrumb"
    role="list"
  >
    <div
      class="arco-breadcrumb-item"
      role="listitem"
    >
      Home
    </div>
    <span
      aria-hidden="true"
      class="arco-breadcrumb-item-separator"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-oblique-line"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M29.506 6.502 18.493 41.498"
        />
      </svg>
    </span>
    <span
      aria-label="ellipses of breadcrumb items"
      class="arco-breadcrumb-item-ellipses"
    >
      ...
    </span>
    <span
      aria-hidden="true"
      class="arco-breadcrumb-item-separator"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-oblique-line"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M29.506 6.502 18.493 41.498"
        />
      </svg>
    </span>
    <div
      class="arco-breadcrumb-item"
      role="listitem"
    >
      Channel
    </div>
    <span
      aria-hidden="true"
      class="arco-breadcrumb-item-separator"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-oblique-line"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M29.506 6.502 18.493 41.498"
        />
      </svg>
    </span>
    <div
      class="arco-breadcrumb-item"
      role="listitem"
    >
      News
    </div>
  </div>
</div>
`;

exports[`renders Breadcrumb/demo/separator.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:40px"
  >
    <div
      class="arco-breadcrumb"
      role="list"
    >
      <div
        class="arco-breadcrumb-item"
        role="listitem"
      >
        Home
      </div>
      <span
        aria-hidden="true"
        class="arco-breadcrumb-item-separator"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-oblique-line"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M29.506 6.502 18.493 41.498"
          />
        </svg>
      </span>
      <div
        class="arco-breadcrumb-item"
        role="listitem"
      >
        Channel
      </div>
      <span
        aria-hidden="true"
        class="arco-breadcrumb-item-separator"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-oblique-line"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M29.506 6.502 18.493 41.498"
          />
        </svg>
      </span>
      <div
        class="arco-breadcrumb-item"
        role="listitem"
      >
        News
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:40px"
  >
    <div
      class="arco-breadcrumb"
      role="list"
    >
      <div
        class="arco-breadcrumb-item"
        role="listitem"
      >
        Home
      </div>
      <span
        aria-hidden="true"
        class="arco-breadcrumb-item-separator"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-right"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="m16 39.513 15.556-15.557L16 8.4"
          />
        </svg>
      </span>
      <div
        class="arco-breadcrumb-item"
        role="listitem"
      >
        Channel
      </div>
      <span
        aria-hidden="true"
        class="arco-breadcrumb-item-separator"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-right"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="m16 39.513 15.556-15.557L16 8.4"
          />
        </svg>
      </span>
      <div
        class="arco-breadcrumb-item"
        role="listitem"
      >
        News
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div
      class="arco-breadcrumb"
      role="list"
    >
      <div
        class="arco-breadcrumb-item"
        role="listitem"
      >
        Home
      </div>
      <span
        aria-hidden="true"
        class="arco-breadcrumb-item-separator"
      >
        <span>
          ・
        </span>
      </span>
      <div
        class="arco-breadcrumb-item"
        role="listitem"
      >
        Channel
      </div>
      <span
        aria-hidden="true"
        class="arco-breadcrumb-item-separator"
      >
        <span>
          ・
        </span>
      </span>
      <div
        class="arco-breadcrumb-item"
        role="listitem"
      >
        News
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Breadcrumb/demo/size.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:40px"
  >
    <div
      class="arco-breadcrumb"
      role="list"
    >
      <div
        class="arco-breadcrumb-item"
        role="listitem"
      >
        Home
      </div>
      <span
        aria-hidden="true"
        class="arco-breadcrumb-item-separator"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-oblique-line"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M29.506 6.502 18.493 41.498"
          />
        </svg>
      </span>
      <div
        class="arco-breadcrumb-item"
        role="listitem"
      >
        Channel
      </div>
      <span
        aria-hidden="true"
        class="arco-breadcrumb-item-separator"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-oblique-line"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M29.506 6.502 18.493 41.498"
          />
        </svg>
      </span>
      <div
        class="arco-breadcrumb-item"
        role="listitem"
      >
        News
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div
      class="arco-breadcrumb"
      role="list"
      style="font-size:12px"
    >
      <div
        class="arco-breadcrumb-item"
        role="listitem"
      >
        Home
      </div>
      <span
        aria-hidden="true"
        class="arco-breadcrumb-item-separator"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-oblique-line"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M29.506 6.502 18.493 41.498"
          />
        </svg>
      </span>
      <div
        class="arco-breadcrumb-item"
        role="listitem"
      >
        Channel
      </div>
      <span
        aria-hidden="true"
        class="arco-breadcrumb-item-separator"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-oblique-line"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M29.506 6.502 18.493 41.498"
          />
        </svg>
      </span>
      <div
        class="arco-breadcrumb-item"
        role="listitem"
      >
        News
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Breadcrumb/demo/with-dropdown.md correctly 1`] = `
<div>
  <div
    class="arco-breadcrumb"
    role="list"
  >
    <div
      class="arco-breadcrumb-item"
      role="listitem"
    >
      Home
    </div>
    <span
      aria-hidden="true"
      class="arco-breadcrumb-item-separator"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-oblique-line"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M29.506 6.502 18.493 41.498"
        />
      </svg>
    </span>
    <div
      class="arco-breadcrumb-item arco-breadcrumb-item-with-dropdown"
      role="listitem"
    >
      Channel
      <span
        aria-hidden="true"
        class="arco-breadcrumb-item-dropdown-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-down"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M39.6 17.443 24.043 33 8.487 17.443"
          />
        </svg>
      </span>
    </div>
    <span
      aria-hidden="true"
      class="arco-breadcrumb-item-separator"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-oblique-line"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M29.506 6.502 18.493 41.498"
        />
      </svg>
    </span>
    <div
      class="arco-breadcrumb-item"
      role="listitem"
    >
      News
    </div>
  </div>
  <br />
  <div
    class="arco-breadcrumb"
    role="list"
    style="margin-top:20px"
  >
    <div
      class="arco-breadcrumb-item"
      role="listitem"
    >
      <a
        href="#/"
      >
        Home
      </a>
    </div>
    <span
      aria-hidden="true"
      class="arco-breadcrumb-item-separator"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-oblique-line"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M29.506 6.502 18.493 41.498"
        />
      </svg>
    </span>
    <div
      class="arco-breadcrumb-item arco-breadcrumb-item-with-dropdown"
      role="listitem"
    >
      <a
        href="#/Channel"
      >
        Channel
      </a>
      <span
        aria-hidden="true"
        class="arco-breadcrumb-item-dropdown-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-down"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M39.6 17.443 24.043 33 8.487 17.443"
          />
        </svg>
      </span>
    </div>
    <span
      aria-hidden="true"
      class="arco-breadcrumb-item-separator"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-oblique-line"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M29.506 6.502 18.493 41.498"
        />
      </svg>
    </span>
    <div
      class="arco-breadcrumb-item"
      role="listitem"
    >
      <span>
        News
      </span>
    </div>
  </div>
</div>
`;

exports[`renders Breadcrumb/demo/with-icon.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:40px"
  >
    <div
      class="arco-breadcrumb"
      role="list"
    >
      <div
        class="arco-breadcrumb-item"
        role="listitem"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-home"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M7 17 24 7l17 10v24H7V17Z"
          />
          <path
            d="M20 28h8v13h-8V28Z"
          />
        </svg>
      </div>
      <span
        aria-hidden="true"
        class="arco-breadcrumb-item-separator"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-oblique-line"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M29.506 6.502 18.493 41.498"
          />
        </svg>
      </span>
      <div
        class="arco-breadcrumb-item"
        role="listitem"
      >
        Channel
      </div>
      <span
        aria-hidden="true"
        class="arco-breadcrumb-item-separator"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-oblique-line"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M29.506 6.502 18.493 41.498"
          />
        </svg>
      </span>
      <div
        class="arco-breadcrumb-item"
        role="listitem"
      >
        News
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div
      class="arco-breadcrumb"
      role="list"
      style="font-size:12px"
    >
      <div
        class="arco-breadcrumb-item"
        role="listitem"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-home"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M7 17 24 7l17 10v24H7V17Z"
          />
          <path
            d="M20 28h8v13h-8V28Z"
          />
        </svg>
      </div>
      <span
        aria-hidden="true"
        class="arco-breadcrumb-item-separator"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-oblique-line"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M29.506 6.502 18.493 41.498"
          />
        </svg>
      </span>
      <div
        class="arco-breadcrumb-item"
        role="listitem"
      >
        Channel
      </div>
      <span
        aria-hidden="true"
        class="arco-breadcrumb-item-separator"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-oblique-line"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M29.506 6.502 18.493 41.498"
          />
        </svg>
      </span>
      <div
        class="arco-breadcrumb-item"
        role="listitem"
      >
        News
      </div>
    </div>
  </div>
</div>
`;
